# Tetris_C

./: CMakeLists.txt  tetris.cpp
base/: GameWindowResolutionSetup.cpp
